--- a/index.html
+++ b/index.html
@@ -47,6 +47,12 @@
       color: rgb(153,153,226);
       font-size: 1.06rem;
      }
+     main hr{
+      border: 0;
+      background: #9c97f1;
+      height: 1.2px;
+      margin: 4rem -3.1rem;
+     }
     .left{
       font-size: 2.6rem;
     }
@@ -54,7 +60,7 @@
       display: flex;
       justify-content: space-around;
       align-items: center;
-      margin: 8rem 0;
+      margin: 7rem 0;
     }
 
     .frist-section>div{
@@ -62,7 +68,7 @@
     }
 
     .left-section{
-      font-size: 4rem;
+      font-size: 3.4rem;
     }
     .right-section img{
       width: 80%;
@@ -77,7 +83,12 @@
       color: #b581e6;
 
     }
+    .second-section{
+      max-width: 80vw;
+      margin: auto;
+    }
 
+    
   </style>
 </head>
 <body>
@@ -107,6 +118,10 @@
       <div class="right-section">
         <img src="/right-section-img.png" alt="">
       </div>
+    </section>
+    <section class="second-section">
+      <hr>
+      <h1>Past Experience</h1>
     </section>
   </main>
   
