--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     
     </section>
     
-    <section class="second-section">
+    <section class="third-section">
       <hr>
 
       <h1>Project</h1>
