--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     <section class="second-section" id="about">
       <hr>
       <h1>Skills:</h1>
-      <div class="skill-box">
+      <div class="box">
         <p><strong>HTML:</strong> As a front-end developer, I have a strong command of HTML, which enables me to create the structure and layout of web pages effectively. I am proficient in writing semantic and accessible HTML code.</p>
         <p><strong>CSS:</strong>I possess a deep understanding of CSS and its various properties, which enables me to style web pages and create visually appealing designs. I am skilled in responsive design, CSS frameworks, and pre-processors like SASS</p>
         <p><strong>JavaScript:</strong>With my knowledge of JavaScript, I can develop interactive and dynamic web applications. I am experienced in using JavaScript frameworks such as React.js and jQuery to enhance user experiences and build robust front-end solutions.        </p>
