--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <ul>
           <li><a href="/">Home</a></li>
           <li><a href="#about">About</a></li>
-          <li><a href="/">Education</a></li>
+          <li><a href="#skill">Skills</a></li>
           <li><a href="#project">Project</a></li>
           <li><a href="#contact-me">Contact Me</a></li>
         </ul>
@@ -60,7 +60,7 @@
     </div>
     
     </section>
-    <section class="second-section" id="about">
+    <section class="second-section" id="skill">
       <hr>
       <h1>Skills:</h1>
       <div class="box">
