--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             <img src="guess_num.jpg" alt="">
         </div>
         <div class="project-description">
-          <h1>Food Delivery</h1>
+          <h1>Food Delivery Project:</h1>
           <span class="link-project"><a href="https://github.com/toufikunsure-4529/omnifood-frontend-app"
                   target="_blank">Get Source Code&#8594;</a></span>
           <p class="text-project">Contributed to the development of a food delivery website using modern front-end technologies. Collaborated with a team to create an user interface.</p>
