Update Responsive View

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
       </div>
       <div class="footer-fourth">
         <div class="subscribe-form">
-          <form id='Support-Form' method='post' name='Subscription Email'><input type='hidden' name='form-name' value='Subscription Email' />
+          <form id='Support-Form' method='post' name='Subscription Email' netlify><input type='hidden' name='form-name' value='Subscription Email' />
             <input  type="email" name="email" placeholder="Your email here" required>
             <button class="btn" type="submit">Send</button>
           </form>
