Update Meta Data

--- a/index.html
+++ b/index.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta property="og:title" content="Myrtis Beaverdam | Front End Web Developer"/>
+  <meta property="og:description" content="JavaScript wizard, chaotic good" />
+  <meta property="og:image" content="http://toufikportfolio.netlify.app/My_Photo.png"/>
+  <meta property="og:url" content="http://toufikportfolio.netlify.app/" />
+  <meta property="og:type" content="website" />
   <title>Toufik - Developer Portfolio</title>
+  <link rel="shortcut icon" href="/favicon.png" type="image/x-icon">
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="queries.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -29,7 +33,7 @@
   <main>
     <section class="frist-section">
       <div class="left-section">
-        <div>Heyy, My Name is <span class="purple">Toufik.</span></div>
+        <div>Hey there! I'm, <span class="purple">Toufik.</span></div>
         <div>and I am a</div>
         <span id="element"></span>
         <div class="buttons">
