--- a/index.html
+++ b/index.html
@@ -24,6 +24,16 @@
   })(window,document,'script','dataLayer','GTM-TJ5WFN23');
 </script>
   <!-- End Google Tag Manager -->
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-6D7Q4WZYEQ">
+</script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-6D7Q4WZYEQ');
+</script>
   </head>
   <body>
     <!-- Google Tag Manager (noscript) -->
