--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta http-equiv="x-ua-compatible" content="IE-edge">
     <meta name="description" content="Devloper Portfolio, chaotic good">
     <meta property="og:title" content="Toufik Sk | Front End Web Developer" />
-    <meta property="og:image"content="devloper.png" />
+    <meta property="og:image"content="icon.png" />
     <title>Toufik - Developer Portfolio</title>
-    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="/icon.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="/queries.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
