Meta tag update

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta http-equiv="x-ua-compatible" content="IE-edge">
-    <meta name="description" content="Devloper Portfolio, chaotic good">
+    <meta name="description" content="Toufik Portfolio, chaotic good">
     <meta property="og:title" content="Toufik Sk | Front End Web Developer" />
     <meta property="og:image" content="icon.png" />
     <meta name="google-site-verification"
