request call back add use sheetdb API & main color changes new UI update

--- a/index.html
+++ b/index.html
@@ -196,15 +196,10 @@
 
         <section class="contact" id="contact">
           <div class="center-txt" data-aos="fade-down">
-            <h2>Contact <span>Me</span></h2>
+            <h2>Request <span style="color: black;">Call Back</span></h2>
           </div>
-          <div class="contact-form" data-aos="zoom-in">
-            <form action="">
-              <input type="text" placeholder="Enter Your Name" required>
-              <input type="email" placeholder="Email Address.." required>
-              <textarea name="" id="" cols="30" rows="10" placeholder="Write Massage Here..."></textarea>
-              <input type="submit" value="Send Message" class="sendMsg-btn">
-            </form>
+          <div class="contact-form" style="color: black;">
+            <script src="https://sheetdb.io/s/f/2wl2x9so7n60s.js"></script>
           </div>
         </section>
 
@@ -220,6 +215,7 @@
     </main>
 
     <script src="/src/js/app.js"></script>
+    
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
       AOS.init({
